--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -17,7 +17,7 @@
           <div class="rd-navbar-panel">
             <!-- RD Navbar Toggle-->
             <button data-rd-navbar-toggle=".rd-navbar-nav-wrap" class="rd-navbar-toggle"><span></span></button>
-            <!-- RD Navbar Brand--><a href="/user/indextemplate"  class="rd-navbar-brand brand">
+            <!-- RD Navbar Brand--><a href="/user/index"  class="rd-navbar-brand brand">
             <div class="brand-logo">
               <svg x="0px" y="0px" width="157px" height="41px" viewbox="0 0 157 41">
                 <text transform="matrix(1 0 0 1 1.144409e-004 32)" fill="#2C2D2F" font-family="'Grand Hotel'" font-size="45.22">QuickFood</text>
@@ -30,16 +30,7 @@
             <!-- RD Navbar Nav-->
             <!-- RD Navbar Nav-->
             <ul class="rd-navbar-nav">
-              <li><a href="#" class="navbar-icon restaurant-icon-19">Menu</a>
-                <!-- RD Navbar Dropdown-->
-                <ul class="rd-navbar-dropdown menu-img-wrap">
-                  <li class="menu-img"><a routerLink="/singlemenu"><img src="assets/images/menu-food-01.png" alt="" width="88" height="60"><span>Pizzas</span></a></li>
-                  <li class="menu-img"><a routerLink="/singlemenu"><img src="assets/images/menu-food-02.png" alt="" width="88" height="60"><span>Burgers</span></a></li>
-                  <li class="menu-img"><a routerLink="/singlemenu"><img src="assets/images/menu-food-03.png" alt="" width="88" height="60"><span>Drinks</span></a></li>
-                  <li class="menu-img"><a routerLink="/singlemenu"><img src="assets/images/menu-food-04.png" alt="" width="88" height="60"><span>Tosts</span></a></li>
-                  <li class="menu-img"><a routerLink="/singlemenu"><img src="assets/images/menu-food-05.png" alt="" width="88" height="60"><span>Salads</span></a></li>
-                  <li class="menu-img"><a routerLink="/singlemenu"><img src="assets/images/menu-food-06.png" alt="" width="88" height="60"><span>desserts</span></a></li>
-                </ul>
+              <li><a href="/user/allproduct" class="navbar-icon restaurant-icon-19">Menu</a>
               </li>
               <li><a href="#" class="navbar-icon thin-icon-tag">News</a>
                 <ul class="rd-navbar-dropdown">
