--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -34,78 +34,16 @@
               </li>
               <li><a href="#" class="navbar-icon thin-icon-tag">News</a>
                 <ul class="rd-navbar-dropdown">
-                  <li><a routerLink="/blogclassic">Classic Blog</a></li>
-                  <li><a routerLink="/bloggrid">Grid Blog</a></li>
-                  <li><a routerLink="/blogmasonry">Masonry Blog</a></li>
-                  <li><a routerLink="/blogmodern">Modern Blog</a></li>
-                  <li><a routerLink="/blogpost">Blog Post</a></li>
+                  <li><a routerLink="/user/classicblog">Classic Blog</a></li>
+                  <li><a routerLink="/user/gridblog">Grid Blog</a></li>
+                  <li><a routerLink="/user/masonryblog">Masonry Blog</a></li>
+                  <li><a routerLink="/user/modernblog">Modern Blog</a></li>
+                  <li><a routerLink="/user/postblog">Blog Post</a></li>
                 </ul>
               </li>
-              <li><a routerLink="/contacts" class="navbar-icon thin-icon-map-marker">Contacts</a></li>
-              <li><a href="#features" class="navbar-icon thin-icon-layers">Pages</a>
-                <!-- RD Navbar Megamenu-->
-                <ul class="rd-navbar-megamenu">
-                  <li>
-                    <h6 class="rd-megamenu-header">Pages</h6>
-                    <ul class="list-marked">
-                      <li><a routerLink="/carrers">Careers</a></li>
-                      <li><a routerLink="/faq">FAQ</a></li>
-                      <li><a routerLink="/indextemplate">Deals</a></li>
-                      <li><a routerLink="/commingsoon">Coming Soon</a></li>
-                      <li><a routerLink="/indextemplate">404 Page</a></li>
-                      <li><a routerLink="/indextemplate">503 Page</a></li>
-                      <li><a routerLink="/indextemplate">Search Result</a></li>
-                      <li><a routerLink="/indextemplate">Maintenance Page</a></li>
-                      <li><a routerLink="/indextemplate">Terms of Use</a></li>
-                      <li><a routerLink="/memberprofig">Member profile</a></li>
-                      <li><a routerLink="/team">Our Team</a></li>
-                      <li><a routerLink="/testimonials">Testimonials</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <h6 class="rd-megamenu-header">Additional Pages</h6>
-                    <ul class="list-marked">
-                      <li><a routerLink="/typography">Typography</a></li>
-                      <li><a routerLink="/indextemplate">Buttons</a></li>
-                      <li><a routerLink="/indextemplate">Forms</a></li>
-                      <li><a routerLink="/indextemplate">Icons</a></li>
-                      <li><a routerLink="/indextemplate">Grid</a></li>
-                      <li><a routerLink="/indextemplate">Tabs &amp; Accordions</a></li>
-                      <li><a routerLink="/indextemplate">Progress Bars</a></li>
-                      <li><a routerLink="/indextemplate">Tables</a></li>
-                      <li><a routerLink="/indextemplate">Login/Register </a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <h6 class="rd-megamenu-header">Layouts</h6>
-                    <ul class="list-marked">
-                      <li><a routerLink="/indextemplate">Default Header</a></li>
-                      <li><a routerLink="/indextemplate">Corporate Header</a></li>
-                      <li><a routerLink="/indextemplate">Sidebar Header</a></li>
-                    </ul>
-                    <h6 class="rd-megamenu-header">Menu</h6>
-                    <ul class="list-marked">
-                      <li><a routerLink="/menuclassic">Menu Classic</a></li>
-                      <li><a routerLink="/menumodern">Menu Modern</a></li>
-                      <li><a routerLink="/singlemenu">Menu Single</a></li>
-                      <li><a routerLink="/shopsingle">Product Single</a></li>
-                      <li><a routerLink="/cardpage">Cart page</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <h6 class="rd-megamenu-header">Extra</h6>
-                    <ul class="list-marked">
-                      <li><a routerLink="/aboutus">About Us</a></li>
-                    </ul>
-                    <h6 class="rd-megamenu-header">Gallery</h6>
-                    <ul class="list-marked">
-                      <li><a routerLink="/gallerygrid">Grid Gallery</a></li>
-                      <li><a routerLink="/gallerycobbles">Cobbles Gallery</a></li>
-                      <li><a routerLink="/gallerymasonry">Masonry Gallery</a></li>
-                      <li><a routerLink="/gallerycondensed">Grid without Padding</a></li>
-                    </ul>
-                  </li>
-                </ul>
+              <li><a routerLink="/user/contacts" class="navbar-icon thin-icon-map-marker">Contacts</a></li>
+              <li><a routerLink="/user/aboutus" class="navbar-icon thin-icon-layers ">About Us</a>
+
               </li>
             </ul>
 
