--- a/src/app/user/single/single.component.html
+++ b/src/app/user/single/single.component.html
@@ -18,23 +18,23 @@
 
   <section class="section-50 section-sm-100">
     <div class="shell">
-      <div class="range range-xs-center">
+      <div class="range range-xs-center" *ngIf="productDetail">
         <div class="cell-sm-6 text-lg-left">
           <!-- Slick Carousel-->
           <div data-arrows="false" data-loop="false" data-dots="false" data-swipe="false" data-items="1" data-child="#child-carousel" data-for="#child-carousel" class="slick-slider carousel-parent">
-            <div class="item"><img src="assets/images/product-01-542x448.png" alt="" width="542" height="448" class="img-responsive reveal-inline-block"/>
+            <div class="item"><img src="assets/images/{{productDetail.proImage}}" alt="" width="542" height="448" class="img-responsive reveal-inline-block"/>
             </div>
           </div>
           <div id="child-carousel" data-for=".carousel-parent" data-arrows="false" data-loop="false" data-dots="false" data-swipe="true" data-items="3" data-xs-items="3" data-sm-items="3" data-md-items="4" data-lg-items="5" data-slide-to-scroll="1" class="slick-slider align-center">
             <div class="item">
-              <div><img src="assets/images/product-thumb-01-84x69.png" alt="" width="84" height="69"/>
+              <div><img src="assets/images/{{productDetail.proImage}}" alt="" width="84" height="69"/>
               </div>
             </div>
           </div>
         </div>
         <div class="cell-sm-6 cell-lg-5 text-sm-left offset-top-60 offset-sm-top-0">
           <div class="reveal-xs-flex range-xs-middle range-xs-center range-sm-left">
-            <h4 class="font-default">California Burger</h4>
+            <h4 class="font-default">{{productDetail.proName}}</h4>
             <div class="inset-xs-left-50 offset-top-0">
               <div class="team-member-position team-member-position-burnt-sienna"><span class="big text-italic text-middle">Hot</span></div>
             </div>
@@ -49,8 +49,8 @@
           <div class="offset-top-30">
             <div class="responsive-tabs responsive-tabs-shop responsive-tabs-horizontal">
               <ul class="resp-tabs-list">
-                <li><span class="price">$25.90</span><span class="icon icon-circle">Big</span></li>
-                <li><span class="price">$13.90</span><span class="icon icon-circle">Mini</span></li>
+                <li><span class="price">${{productDetail.proPrice}}</span><span class="icon icon-circle">Big</span></li>
+                <li><span class="price">${{productDetail.proPrice - 20}}</span><span class="icon icon-circle">Mini</span></li>
               </ul>
               <div class="resp-tabs-container">
                 <div>
