--- a/src/app/user/index/product/product.component.html
+++ b/src/app/user/index/product/product.component.html
@@ -15,7 +15,7 @@
               </figure>
               <div class="caption">
                 <h5><a [routerLink]="['/user/single', pro.proId]" class="link link-default">{{pro.proName}}</a></h5>
-                <p class="text-italic">{{pro.proDetails}}</p>
+                <p class="text-italic">{{pro.proQuickView}}</p>
                 <p class="price">{{pro.proPrice}}</p><a href="shop-single.html" class="btn btn-shape-circle btn-burnt-sienna offset-top-15">Order Online</a>
               </div>
             </div>
