--- a/src/app/admin/product/product.component.html
+++ b/src/app/admin/product/product.component.html
@@ -27,11 +27,10 @@
         </select>
       </div>
 
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label>Details</label>
         <input class="form-control" formControlName="proDetails" type="text" name="proDetails">
-      </div>
-
+      </div> -->
       <div class="form-group">
         <label>Images</label>
         <input class="form-control" type="file" name="proImage" (change)="onFileChange($event)">
@@ -45,7 +44,19 @@
         <div class="alert alert-danger" *ngIf="productAddForm.get('proPrice')?.errors?.pattern">bạn cần nhập số độ dài 2-10 ký tự</div>
       </div>
 
-      <button type="submit" class="btn btn-success" [disabled]="productAddForm.invalid">Submit</button>
+      <div class="form-group">
+        <label>Quick View</label>
+        <input class="form-control" formControlName="proQuickView" type="text" name="proQuickView">
+        <div class="alert alert-danger" *ngIf="productAddForm.get('proQuickView')?.errors?.required && productAddForm.get('proQuickView')?.touched">bạn chưa nhập Quick view!</div>
+        <div class="alert alert-danger" *ngIf="productAddForm.get('proQuickView')?.errors?.minlength || productAddForm.get('proQuickView')?.errors?.maxlength">Phai co 2-100 ky tu!</div>
+      </div>
+
+      <div class="form-group">
+        <label>Details</label>
+        <textarea class="form-control" formControlName="proDetails" name="proDetails" [froalaEditor]></textarea>
+      </div>
+
+      <button type="submit" class="btn btn-success" >Submit</button>
     </form>
   </div>
 
@@ -66,7 +77,7 @@
       <td>{{stt+1}}</td>
       <td>{{ pro.proId }}</td>
       <td>{{ pro.proName }}</td>
-      <td>{{ pro.protype.prtName }}</td>
+      <td>{{ pro.protype?.prtName }}</td>
       <td>{{ pro.proPrice }}</td>
       <td>{{ pro.proImage }}</td>
       <td><button type="button" class="btn btn-danger" (click)="delete(pro.proId); $event.stopPropagation()">Delete</button></td>
